# huaweicloud-sdk-c-obs

./: CMakeLists.txt
source/eSDK_OBS_API/eSDK_OBS_API_C++/: BUCKET_ENCRYPTION_FEATURE.md  BUILD_TEMP_URL.md  OBS.ini  TASK1_COMPLETION_SUMMARY.md  TEMP_URL_FEATURE.md  build.sh
source/eSDK_OBS_API/eSDK_OBS_API_C++/inc/: eSDKOBS.h  temp_url.h
source/eSDK_OBS_API/eSDK_OBS_API_C++/src/: bucket_encryption.c  general.c  request.c  request_util.c  ssl_config.c  ssl_config.h  temp_url.c
source/eSDK_OBS_API/eSDK_OBS_API_C++/test/: CMakeLists.txt  ssl_config_test.c  test_bucket_encryption.c  test_temp_url.c
source/eSDK_OBS_API/eSDK_OBS_API_C++_Demo/: demo_temp_url.c
